--- a/HelloLibertyEAR/.settings/org.eclipse.wst.common.component
+++ b/HelloLibertyEAR/.settings/org.eclipse.wst.common.component
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="HelloLibertyEAR">
         <wb-resource deploy-path="/" source-path="/" tag="defaultRootSource"/>
-        <dependent-module archiveName="HelloLiberty.jar" deploy-path="/" handle="module:/resource/HelloLiberty/HelloLiberty">
-            <dependent-object>Module_1443142137228</dependent-object>
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="HelloLibertyClient.jar" deploy-path="/" handle="module:/resource/HelloLibertyClient/HelloLibertyClient">
+        <dependent-module archiveName="HelloLibertyClient.jar" deploy-path="/lib" handle="module:/resource/HelloLibertyClient/HelloLibertyClient">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="HelloLibertyWeb.war" deploy-path="/" handle="module:/resource/HelloLibertyWeb/HelloLibertyWeb">
-            <dependent-object>Module_1443183139628</dependent-object>
+            <dependent-object>Module_1443318022505</dependent-object>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="HelloLiberty.jar" deploy-path="/" handle="module:/resource/HelloLiberty/HelloLiberty">
+            <dependent-object>Module_1443318022511</dependent-object>
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
